--- a/index.html
+++ b/index.html
@@ -114,5 +114,11 @@
         <a href="http://htmlacademy.ru">HTML ACADEMY</a>
       </div>
     </footer>
+    <section>
+        <h2>Личный кабинет</h2>
+        <p>Введите свой логин и пароль.</p>
+        <!-- Здесь будет форма -->
+        <button type="button">Закрыть</button>
+      </section>
   </body>
 </html>
